[package]
name = "perf_monitor"
version = "0.2.0"
authors = ["zhangli.pear <zhangli.pear@bytedance.com>"]
edition = "2018"

license-file = "LICENSE"
description = "A toolkit designed to be a foundation for applications to monitor their performance."
repository = "https://github.com/larksuite/perf-monitor-rs"
documentation = "https://docs.rs/perf_monitor/"

categories = ["api-bindings", "accessibility", "development-tools"]
keywords = ["perf", "statistics", "monitor", "performance"]


[features]
alloc_hook_prof = ["alloc_hook"]
alloc_hook_switchable = ["alloc_hook"]
alloc_hook = []
darwin_private = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"
thiserror = "1"
errno = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.8", features = ["winnt", "processthreadsapi", "sysinfoapi", "impl-default","std","heapapi","handleapi","psapi"] }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
lpfs = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach =  "0.3"

[build-dependencies]
bindgen = "0.59"
cc = "1.0"
