[package]
name = "perf_monitor"
version = "0.2.0"
authors = ["zhangli.pear <zhangli.pear@bytedance.com>"]
edition = "2018"

license-file = "LICENSE"
description = "A toolkit designed to be a foundation for applications to monitor their performance."
repository = "https://github.com/larksuite/perf-monitor-rs"
documentation = "https://docs.rs/perf_monitor/"

categories = ["api-bindings", "accessibility", "development-tools"]
keywords = ["perf", "statistics", "monitor", "performance"]


[features]
allocation_counter = []
darwin_private = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"
thiserror = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
mach =  "0.3"

[build-dependencies]
bindgen = "0.59"
cc = "1.0"
